# pumpwood-deploy-model-llm

./: LICENSE  README.md  build.sh  dev_requirements.txt  pyproject.toml  pyproject_template.toml
src/pumpwood_deploy_model_llm/: __init__.py  deploy.py
src/pumpwood_deploy_model_llm/resources/: deploy__app.yml  deploy__embedding__worker.yml  deploy__extraction__worker.yml  deploy__segmentation__worker.yml  secrets.yml
src/pumpwood_deploy_model_llm/tests/: test__PumpWoodModelLLMMicroservice.py
src/pumpwood_llm_model/resources_yml/: deploy__app.yaml  deploy__embedding__worker.yaml  deploy__extraction__worker.yaml  deploy__segmentation__worker.yaml  secrets.yaml
